--- a/src/Components/UI/Navbar.css
+++ b/src/Components/UI/Navbar.css
@@ -18,15 +18,21 @@
 
 .NavBox {
   display: flex;
-  background-color: #5f5f5f;
+  background-color: #f76c6c;
   width: 100%;
   min-height: 3rem;
-  justify-content: left;
-  align-content: center;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  /*border: 0.2rem solid #0a93ee;*/
+  justify-content: space-between;
+  align-content: center;
 }
 
-.space {
-  margin-left: 1.5rem;
+.NavLinkBox {
+  align-content: center;
+}
+
+.text {
+  align-content: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1rem;
 }
