--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -18,15 +18,28 @@
 
 .NavBox {
   display: flex;
+  flex-direction: row;
   background-color: rgba(43, 118, 220);
   width: 100%;
   min-height: 3rem;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25]);
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   align-content: center;
 }
 
+.NavBox-Bg {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(43, 118, 220);
+  width: 100%;
+  height: 100%;
+}
+
 .NavLinkBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
   align-content: center;
   height: 100%;
   padding: 0 1rem;
@@ -40,4 +53,56 @@
   font-size: 3rem;
   padding: 0 1rem;
   margin: 0;
+}
+
+.icon {
+  cursor: pointer;
+}
+
+.small {
+  display: none;
+}
+
+.Hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 940px) {
+  .small {
+    display: flex;
+    z-index: 2;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: -100vh;
+    left: 0;
+    justify-content: space-between;
+    background-color: rgba(40, 40, 40, 0.891);
+    transition: 0.3s;
+  }
+
+  .active {
+    top: 55px;
+  }
+
+  .small-menu {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
+  }
+
+  .NavLinkBox {
+    display: none;
+  }
+
+  .Hamburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+  }
+  .Hamburger .icon:hover {
+    transform: scale(1.5);
+    transition: 0.3s;
+  }
 }
