--- a/src/Components/Pages/Home.css
+++ b/src/Components/Pages/Home.css
@@ -1,33 +1,45 @@
-.Background {
-  background-color: #ffffff;
+.Content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.InfoBox {
-  margin-top: 5rem;
-  width: 50rem;
-  height: 30rem;
+.Top {
   display: flex;
-  background-color: #a8d0e6;
-  flex-direction: column;
-  justify-content: flex-start;
+  width: 100%;
+  height: 60vh;
+  background-color: rgb(166, 164, 164);
   align-items: center;
-  border: 2px solid #374785;
-  border-radius: 25px;
+  justify-content: center;
+}
+
+.Bottom {
+  display: flex;
+  width: 100%;
+  height: 30vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .ContentBox {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .Text {
   overflow-wrap: break-word;
-  inline-size: 20rem;
+  inline-size: 40rem;
   font-size: 1rem;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
 .Image {
