Created 2 sections that are in a row in larger screen and a column if mobile

--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -39,7 +39,7 @@
 .NavLinkBox {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   align-content: center;
   height: 100%;
   padding: 0 1rem;
