--- a/src/Components/Pages/Resume.css
+++ b/src/Components/Pages/Resume.css
@@ -123,10 +123,84 @@
   display: flex;
   flex-direction: column;
   min-width: 65%;
-  height: 100vh;
-  /*
-  background-color: aquamarine;
-  */
+  max-height: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.Work {
+  padding: 0 2rem;
+  margin: 0;
+  height: 100%;
+}
+
+.Work H1 {
+  padding: 0rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+
+.Work H2 {
+  padding: 0.5rem;
+  margin: 0;
+}
+
+.Line-Right {
+  padding: 0;
+  margin: 0;
+}
+
+.Job {
+  padding: 0 1rem;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.Job H2 {
+  padding: 0rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.Job H3 {
+  padding: 0rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.Job-Header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 0;
+  margin: 0;
+}
+
+.Job-List {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0;
+  margin: 0;
+}
+
+.Job-List ul {
+  padding: 0.3rem 2.25rem;
+  margin: 0;
+}
+
+.Job-List li {
+  font-size: 12pt;
+  font-weight: bold;
+  padding: 0.1rem;
+}
+
+.Job-Sublist li {
+  font-size: 14pt;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 940px) {
