--- a/src/Components/NavBar/Navbar.module.css
+++ b/src/Components/NavBar/Navbar.module.css
@@ -11,20 +11,22 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 0 1rem;
+  margin: 0 1rem;
 }
 
 .nav-box {
   display: flex;
   flex-direction: row;
-  opacity: 0.8;
-
+  opacity: 0.9;
+  background-color: white;
   width: 100%;
   min-height: 3rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  position: fixed;
+  top: 0;
 }
 
 .nav-box ul {
