--- a/src/Components/NavBar/Navbar.module.css
+++ b/src/Components/NavBar/Navbar.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: row;
   opacity: 0.9;
-  background-color: white;
+  background-color: #feffff;
   width: 100%;
   min-height: 3rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
@@ -56,15 +56,6 @@
   background-color: rgba(43, 118, 220);
   width: 100%;
   height: 100%;
-}
-
-.NavLinkBox {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-content: center;
-  height: 100%;
-  padding: 0 1rem;
 }
 
 .text {
