--- a/src/Components/Pages/Home.module.css
+++ b/src/Components/Pages/Home.module.css
@@ -3,9 +3,38 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #feffff;
+}
+
+.main {
+  margin-top: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
-  background-color: #d2fdff;
+  background-color: #b4dfe5;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 55rem;
+}
+
+.text p {
+  font-size: large;
+  text-align: center;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image {
+  width: 40%;
+  height: 40%;
+  border-radius: 20rem;
+  margin-right: 5rem;
+  margin-left: 1rem;
 }
