--- a/src/Components/UI/ContentBox.module.css
+++ b/src/Components/UI/ContentBox.module.css
@@ -1,7 +1,7 @@
 .box {
   margin: 1rem auto;
-  border-radius: 6px;
+  border-radius: 16px;
   padding: 1rem;
-  max-width: 50rem;
+  min-width: 30rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
