--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -18,14 +18,17 @@
   flex-direction: row;
   background-color: #474853;
   width: 100%;
-  max-height: 4.5rem;
+  height: 4rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  position: fixed;
+  margin-top: auto;
+
+  position: static;
   left: 0;
   bottom: 0;
+  right: 0;
 }
 
 .footer-box ul {
