--- a/src/Components/NavBar/Navbar.module.css
+++ b/src/Components/NavBar/Navbar.module.css
@@ -20,13 +20,14 @@
   opacity: 0.9;
   background-color: #feffff;
   width: 100%;
-  min-height: 3rem;
+  height: 3rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  position: fixed;
+  position: sticky;
   top: 0;
+  left: 0;
 }
 
 .nav-box ul {
