--- a/src/Components/Pages/Home.module.css
+++ b/src/Components/Pages/Home.module.css
@@ -1,14 +1,9 @@
-.home {
+.content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  height: calc(100vh - 7rem);
 }
 
 .box {
@@ -18,6 +13,9 @@
   align-items: center;
   max-width: 55rem;
   padding: 1.5rem 2rem;
+  min-height: 15rem;
+  max-height: 25rem;
+  flex: 1;
 }
 
 .text p {
@@ -32,8 +30,8 @@
 }
 
 .image {
-  width: 70%;
-  height: 70%;
+  width: 40%;
+  height: 40%;
   border-radius: 20rem;
   margin-right: 5rem;
 }
