--- a/src/Components/Pages/Resume.module.css
+++ b/src/Components/Pages/Resume.module.css
@@ -1,9 +1,98 @@
-.background {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+.main {
+  padding: 0 2rem;
+  margin-top: 2rem;
 }
 
+.main hr,
+h1 {
+  padding: 0;
+  margin: 0;
+}
 .box {
-  background-color: #e9e9e9;
+  background-color: #b4dfe5;
+  width: 45%;
+}
+
+.column-rules {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 1.5rem;
+}
+
+.left-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0;
+  margin-left: 1rem;
+
+  height: 20rem;
+  width: 7rem;
+  background-color: #feffff;
+  top: 4rem;
+  position: sticky;
+}
+
+.right-column {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 85%;
+}
+
+.education {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  margin-bottom: 3rem;
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  background-color: #b4dfe5;
+  margin-bottom: 3rem;
+}
+
+.jobs {
+  display: flex;
+  flex-direction: column;
+  background-color: #b4dfe5;
+
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 3rem;
+}
+
+.jobs-organize {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.jobs-organize div {
+  background-color: #feffff55;
+  margin: 1rem;
+}
+
+.organize {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.organize div {
+  background-color: #feffff55;
+  width: 1rem;
+  text-align: center;
+  padding: 0.5rem;
+  margin: 1rem 1rem;
+  height: 4rem;
 }
