--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
 }
 
 code {
@@ -15,6 +16,20 @@ code {
   box-sizing: border-box;
 }
 
-.background {
-  background-color: #feffff;
+* button {
+  border-radius: 16px;
+  padding: 1rem;
+  width: auto;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  border-style: none;
+  box-sizing: border-box;
+  font-size: larger;
+  text-align: center;
+  transition: all 0.2s;
+  background-color: #f4976c;
+}
+
+* button:hover,
+button:active {
+  background-color: #fbe8a6;
 }
