--- a/src/Components/Pages/About.module.css
+++ b/src/Components/Pages/About.module.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #b4dfe5;
+  background-color: #b4dfe552;
   margin: 1rem 0;
 }
 
@@ -34,6 +34,11 @@
 .main h2 {
   padding: 0;
   margin: 0;
+}
+
+.main a {
+  text-decoration: none;
+  color: blue;
 }
 
 .right-text {
@@ -57,6 +62,6 @@
 .info-box-left {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: flex-start;
 }
