--- a/src/Components/Pages/Resume.module.css
+++ b/src/Components/Pages/Resume.module.css
@@ -9,14 +9,14 @@ h1 {
   margin: 0;
 }
 .box {
-  background-color: #b4dfe5;
+  background-color: #b4dfe552;
   width: 45%;
 }
 
 .column-rules {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   margin-top: 1.5rem;
 }
@@ -25,10 +25,9 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 0;
-  margin-left: 1rem;
 
-  height: 20rem;
+  margin-left: 1rem;
+  height: 25rem;
   width: 7rem;
   background-color: #feffff;
   top: 4rem;
@@ -40,7 +39,7 @@ h1 {
   flex-direction: column;
 
   align-items: center;
-  width: 85%;
+  width: 77%;
 }
 
 .education {
@@ -56,14 +55,14 @@ h1 {
 .skills {
   display: flex;
   flex-direction: column;
-  background-color: #b4dfe5;
+  background-color: #b4dfe552;
   margin-bottom: 3rem;
 }
 
 .jobs {
   display: flex;
   flex-direction: column;
-  background-color: #b4dfe5;
+  background-color: #b4dfe552;
 
   justify-content: space-around;
   flex-wrap: wrap;
@@ -87,12 +86,13 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 .organize div {
   background-color: #feffff55;
-  width: 1rem;
+  width: 2rem;
   text-align: center;
-  padding: 0.5rem;
   margin: 1rem 1rem;
-  height: 4rem;
+  height: 5rem;
+  vertical-align: middle;
 }
