--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ code {
   text-align: center;
   transition: all 0.2s;
   background-color: #f4976c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 * button:hover,
