--- a/src/Components/Pages/Contact.module.css
+++ b/src/Components/Pages/Contact.module.css
@@ -18,6 +18,7 @@
 .organize-form button {
   min-width: 15rem;
   margin-bottom: 2rem;
+  margin-top: 1rem;
   font-size: x-large;
   font-weight: bolder;
 }
